--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,17 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: PagerDuty Developer
+email: developers@pagerduty.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
-
-# Build settings
+#baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://developers.pagerduty.com" # the base hostname & protocol for your site
+contact:
+  twitter: "PagerDuty"
+  github: "PagerDuty"
+  email: "developers@pagerduty.com"
+# Markdown renderer
 markdown: kramdown
+# Jekyll will try to compile everything it sees outside of _site. Here's what we should ignore.
 exclude: ['config.ru', 'Gemfile', 'Gemfile.lock', 'vendor']
