--- a/app.json
+++ b/app.json
@@ -1,7 +1,10 @@
 {
-  "name": "PagerDuty Dev Docs",
+  "name": "PagerDuty Developer Documentation",
   "description": "The official documentation for PagerDuty's developer platform.",
   "repository": "https://github.com/PagerDuty/devdocs",
   "logo": "https://developer.pagerduty.com/assets/logos/logo.png",
-  "keywords": ["pagerduty", "jekyll", "static"]
+  "keywords": ["pagerduty", "jekyll", "static"],
+  "env": {
+    "BUILDPACK_URL": "https://github.com/SwiftIRC/heroku-buildpack-ruby-octopress",
+  }
 }
