Updated link to the Phoneduty Heroku repo
The original has some bugs which have been fixed in my fork but my PR with them has been setting for a couple months.

--- a/source/_data/tools.yml
+++ b/source/_data/tools.yml
@@ -53,7 +53,7 @@
   tag: Tool
 
 - name: phoneduty (Heroku)
-  url: https://github.com/vend/phoneduty
+  url: https://github.com/mdcollins05/phoneduty
   type: Alerting
   description: "Twilio/PagerDuty integration to forward inbound calls to the currently on-call engineer"
   tag: Tool
