Fix name in app.json

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "PagerDuty Developer Documentation",
+    "name": "PagerDuty Developer Docs",
     "description": "The official documentation for PagerDuty's developer platform.",
     "repository": "https://github.com/PagerDuty/devdocs",
     "logo": "https://developer.pagerduty.com/assets/logos/logo.png",
