Update links for v2 API.  The existing v1 documents will be hosted on v1.developer.pagerduty.com, and the new v2 documents will be hosted on developer.pagerduty.com.

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: PagerDuty Developer Documentation
+title: PagerDuty Developer Documentation v1
 email: developers@pagerduty.com
-description: The official site for PagerDuty API documentation.
-url: "https://developer.pagerduty.com"
+description: The official site for PagerDuty API v1 documentation.
+url: "https://v1.developer.pagerduty.com/"
 social:
   - twitter: https://www.twitter.com/PagerDuty
   - github: https://github.com/PagerDuty
