Disable external link check

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
 
 script:
 - bundle exec jekyll build
-- bundle exec htmlproof ./public/ --href-ignore "#"
+- bundle exec htmlproof ./public/ --href-ignore "#" --disable-external
 
 env:
   global:
